2009-08-27  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.VersionControl.Views/StatusView.cs: fixed
	  warning.

2009-08-26  Lluis Sanchez Gual  <lluis@novell.com>

	* gtk-gui/gui.stetic: Update gtk# dependency.

2009-08-26  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.VersionControl.csproj: Updated dependencies. We
	  now depend on gtk# 2.12.8, Mono 2.4, and Mono.Addins 0.4.

2009-08-10  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.VersionControl.csproj: Don't make local copies
	  of project references.

2009-07-31  Lluis Sanchez Gual  <lluis@novell.com>

	* Makefile.am:
	* gtk-gui/gui.stetic:
	* MonoDevelop.VersionControl.csproj: Flush.

2009-07-23  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.VersionControl.Views/StatusView.cs:
	* MonoDevelop.VersionControl.Views/CellRendererDiff.cs: The
	  status view now supports double clicking on a line of a diff
	  to jump to that line in the modified file.

2009-07-21  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.VersionControl.Views/StatusView.cs:
	* MonoDevelop.VersionControl.Views/CellRendererDiff.cs: Fixed
	  "Bug 470436 - Crash when using the mouse wheel to scroll
	  very fast on the diff viewer".

2009-06-29  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.VersionControl/Repository.cs: Properly detect
	  versioned directories. Allow reverting whole directories.
	  All this fixes bug #436282 - solution/project/folders should
	  have 'Revert All' option.

2009-06-29  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.VersionControl.Views/StatusView.cs: When
	  double-clicking on a file, open it. Fixes bug #402108 -
	  Double-click on item in the Review changes dialog should
	  open the file or show the differences.

2009-06-25  Levi Bard  <taktaktaktaktaktaktaktaktaktak@gmail.com>

	* MonoDevelop.VersionControl/CreatePatchCommand.cs: 
	  Generate better initial names for created patches.

2009-06-23  Levi Bard  <taktaktaktaktaktaktaktaktaktak@gmail.com>
